list item added

--- a/HTML-Section/chickens.html
+++ b/HTML-Section/chickens.html
@@ -158,5 +158,21 @@
       and acts as a vector for bacterial diseases such as salmonellosis and
       spirochaetosis.[70] Viral diseases include avian influenza.[71]
     </p>
+    <h2>Breeds of chickens</h2>
+    <ol>
+      <li>
+        Bantam
+        <ul>
+          <li>Bantam Mallard</li>
+          <li>Bantam Warbler</li>
+          <li>Bantam Blackbird</li>
+          <li>Bantam Tanager</li>
+        </ul>
+      </li>
+      <li>Silkie</li>
+      <li>Polish</li>
+      <li>Easter Egger</li>
+      <li>Rhode Island Red</li>
+    </ol>
   </body>
 </html>
