about.html file added

--- a/HTML-Section/chickens.html
+++ b/HTML-Section/chickens.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <h1>Chicken</h1>
+    <a href="https://www.google.com/">I am a LINK!</a>
     <p>
       The <b>chicken</b> (Gallus domesticus) is a large and round short-winged
       bird, domesticated from the red junglefowl of Southeast Asia around 8,000
