anchor tags addes

--- a/HTML-Section/chickens.html
+++ b/HTML-Section/chickens.html
@@ -5,7 +5,8 @@
   </head>
   <body>
     <h1>Chicken</h1>
-    <a href="https://www.google.com/">I am a LINK!</a>
+    <a href="http://127.0.0.1:5500/HTML-Section/about.html">I am a LINK!</a>
+    <a href="https://www.google.com/">Google</a>
     <p>
       The <b>chicken</b> (Gallus domesticus) is a large and round short-winged
       bird, domesticated from the red junglefowl of Southeast Asia around 8,000
