--- a/HTML-Section/about.html
+++ b/HTML-Section/about.html
@@ -8,5 +8,6 @@
   <body>
     <h1>About Me</h1>
     <p>I am a human</p>
+    <a href="http://127.0.0.1:5500/HTML-Section/chickens.html">Chickens</a>
   </body>
 </html>
