--- a/HTML-Section/chickens.html
+++ b/HTML-Section/chickens.html
@@ -5,7 +5,14 @@
   </head>
   <body>
     <h1>Chicken</h1>
-    <a href="http://127.0.0.1:5500/HTML-Section/about.html">I am a LINK!</a> <br>
+
+    <img
+      src="/HTML-Section/Images/Male_and_female_chicken_sitting_together.jpg"
+      alt=""
+    />
+
+    <a href="http://127.0.0.1:5500/HTML-Section/about.html">I am a LINK!</a>
+    <br />
     <a href="https://www.google.com/">Google</a>
     <p>
       The <b>chicken</b> (Gallus domesticus) is a large and round short-winged
@@ -176,5 +183,9 @@
       <li>Easter Egger</li>
       <li>Rhode Island Red</li>
     </ol>
+    <img
+      src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ee/Pesse_oujheas_H9N2_tanfla.JPG/1024px-Pesse_oujheas_H9N2_tanfla.JPG"
+      alt="chicken grom wikipidia"
+    />
   </body>
 </html>
