--- a/HTML-Section/chickens.html
+++ b/HTML-Section/chickens.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>Chicken</h1>
-
+ <!-- Comment  -->
     <img
       src="/HTML-Section/Images/Male_and_female_chicken_sitting_together.jpg"
       alt=""
