added inline and block element (div, span)

--- a/HTML-Section/chickens.html
+++ b/HTML-Section/chickens.html
@@ -5,15 +5,17 @@
   </head>
   <body>
     <h1>Chicken</h1>
- <!-- Comment  -->
+    <!-- Comment  -->
     <img
       src="/HTML-Section/Images/Male_and_female_chicken_sitting_together.jpg"
       alt=""
     />
 
-    <a href="http://127.0.0.1:5500/HTML-Section/about.html">I am a LINK!</a>
-    <br />
-    <a href="https://www.google.com/">Google</a>
+    <div>
+      <a href="http://127.0.0.1:5500/HTML-Section/about.html">I am a LINK!</a>
+      <br />
+      <span><a href="https://www.google.com/">Google</a></span>
+    </div>
     <p>
       The <b>chicken</b> (Gallus domesticus) is a large and round short-winged
       bird, domesticated from the red junglefowl of Southeast Asia around 8,000
