br, hr, sup, sub tags are added

--- a/HTML-Section/chickens.html
+++ b/HTML-Section/chickens.html
@@ -5,6 +5,23 @@
   </head>
   <body>
     <h1>Chicken</h1>
+    <hr>
+    <p>
+        <h2>The Chicken's Tale</h2>
+
+    Beneath the sky, so wide and blue, <br>
+    A chicken struts through morning dew. <br>
+    With feathers brushed in hues so fine, <br>
+    A tapestry of earth’s design. <br><br>
+
+    Its cluck, a chorus soft yet clear, <br>
+    A melody the farm holds dear. <br>
+    It scratches dirt with steady feet,<br>
+    In search of grains, a daily treat.<sup><a href="">[ChatGPT]</a></sup><br>
+    </p>
+    <p>
+        water = H<sub>2</sub>O <br>
+    </p>
     <!-- Comment  -->
     <img
       src="/HTML-Section/Images/Male_and_female_chicken_sitting_together.jpg"
