Entity code '&...' added

--- a/HTML-Section/chickens.html
+++ b/HTML-Section/chickens.html
@@ -22,6 +22,9 @@
     <p>
         water = H<sub>2</sub>O <br>
     </p>
+    <p>
+        (1 &lt; 6 &gt; 3 &amp&amp 6 == 110 <sub>(2)</sub>)
+    </p>
     <!-- Comment  -->
     <img
       src="/HTML-Section/Images/Male_and_female_chicken_sitting_together.jpg"
