--- a/HTML-Section/haviest-birds.html
+++ b/HTML-Section/haviest-birds.html
@@ -8,30 +8,34 @@
   <body>
     <h1>Haviest Bird</h1>
     <table>
-        <tr>
-            <th>Animal</th>
-            <th>Average mass [kh (lb)]</th>
-            <th>Maximum mass [kh (lb)]</th>
-            <th>Flighted</th>
-        </tr>
-        <tr>
-            <td>Ostrich</td>
-            <td>1004(230)</td>
-            <td>156.8 (346)</td>
-            <td>No</td>
-        </tr>
-        <tr>
-            <td>Somali Ostrich</td>
-            <td>90 (200)</td>
-            <td>130 (287)</td>
-            <td>No</td>
-        </tr>
-        <tr>
-            <td>Wild Turkry</td>
-            <td>13.5 (29.8)</td>
-            <td>86 (86)</td>
-            <td>Yes</td>
-        </tr>
+        <thead>
+            <tr>
+                <th>Animal</th>
+                <th>Average mass [kh (lb)]</th>
+                <th>Maximum mass [kh (lb)]</th>
+                <th>Flighted</th>
+            </tr>
+         </thead>
+         <tbody>
+            <tr>
+                <td>Ostrich</td>
+                <td>1004(230)</td>
+                <td>156.8 (346)</td>
+                <td>No</td>
+            </tr>
+            <tr>
+                <td>Somali Ostrich</td>
+                <td>90 (200)</td>
+                <td>130 (287)</td>
+                <td>No</td>
+            </tr>
+            <tr>
+                <td>Wild Turkry</td>
+                <td>13.5 (29.8)</td>
+                <td>86 (86)</td>
+                <td>Yes</td>
+            </tr>
+        </tbody>
     </table>
   </body>
 </html>
