--- a/HTML-Section/forms.html
+++ b/HTML-Section/forms.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Forms Demo</h1>
 
-    <form action=""></form>
-</body>
+    <form action="">
+      <input type="text" />
+      <input type="password" />
+      <input type="Color" />
+      <input type="date" />
+      <input type="number" />
+    </form>
+  </body>
 </html>
