--- a/HTML-Section/forms.html
+++ b/HTML-Section/forms.html
@@ -9,11 +9,11 @@
     <h1>Forms Demo</h1>
 
     <form action="">
-      <input type="text" />
-      <input type="password" />
+      <input type="text" placeholder="username" />
+      <input type="password" placeholder="password"/>
       <input type="Color" />
-      <input type="date" />
-      <input type="number" />
+      <input type="date" placeholder="Birth of Date" />
+      <input type="number" placeholder="Enter your age" />
     </form>
   </body>
 </html>
