id attribute added

--- a/HTML-Section/forms.html
+++ b/HTML-Section/forms.html
@@ -9,11 +9,16 @@
     <h1>Forms Demo</h1>
 
     <form action="">
-      <input type="text" placeholder="username" />
-      <input type="password" placeholder="password"/>
-      <input type="Color" />
-      <input type="date" placeholder="Birth of Date" />
-      <input type="number" placeholder="Enter your age" />
+
+      <input id="username" type="text" placeholder="username" />
+
+      <input id="password" type="password" placeholder="password"/>
+      
+      <input id="Color" type="Color" />
+
+      <input id="DOB" type="date" placeholder="Birth of Date" />
+      
+      <input id="age" type="number" placeholder="Enter your age" />
     </form>
   </body>
 </html>
