--- a/HTML-Section/forms.html
+++ b/HTML-Section/forms.html
@@ -9,16 +9,26 @@
     <h1>Forms Demo</h1>
 
     <form action="">
-
-      <input id="username" type="text" placeholder="username" />
-
-      <input id="password" type="password" placeholder="password"/>
-      
-      <input id="Color" type="Color" />
-
-      <input id="DOB" type="date" placeholder="Birth of Date" />
-      
-      <input id="age" type="number" placeholder="Enter your age" />
+        <p>
+            <label for="username">Enter a  UserName: </label>
+            <input id="username" type="text" placeholder="username" />
+        </p>
+        <p>
+            <label for="password">Enter a password: </label>
+            <input id="password" type="password" placeholder="password"/>
+        </p>
+        <p> 
+            <label for="Color">Choose Favorite Color: </label>
+            <input id="Color" type="Color" />
+        </p>
+        <p>
+            <label for="dob">Birth Of Date: </label>
+            <input id="DOB" type="date" placeholder="Birth of Date" />
+        </p>
+        <p>
+            <label for="age">Enter age: </label>
+            <input id="age" type="number" placeholder="Enter your age" />
+        </p>
     </form>
   </body>
 </html>
