--- a/HTML-Section/forms.html
+++ b/HTML-Section/forms.html
@@ -29,6 +29,9 @@
             <label for="age">Enter age: </label>
             <input id="age" type="number" placeholder="Enter your age" />
         </p>
+
+        <button>Submit</button>
+        <input type="button" value="Click Me">
     </form>
   </body>
 </html>
