name attribute added

--- a/HTML-Section/forms.html
+++ b/HTML-Section/forms.html
@@ -7,27 +7,28 @@
   </head>
   <body>
     <h1>Forms Demo</h1>
-
+    <!-- file:///D:/DiskD/UdemyCourses/Web-Development-Learning/HTML-Section/forms.html?username=&password=&Color=%23000000&DOB=&age= -->\
+    <!-- file:///D:/DiskD/UdemyCourses/Web-Development-Learning/HTML-Section/forms.html?username=hiddenclue0&password=Jakir12345&Color=%230a5cff&DOB=2000-01-21&age=22 -->
     <form action="">
         <p>
             <label for="username">Enter a  UserName: </label>
-            <input id="username" type="text" placeholder="username" />
+            <input id="username" type="text" placeholder="username" name="username"/>
         </p>
         <p>
             <label for="password">Enter a password: </label>
-            <input id="password" type="password" placeholder="password"/>
+            <input id="password" type="password" placeholder="password" name="password"/>
         </p>
         <p> 
             <label for="Color">Choose Favorite Color: </label>
-            <input id="Color" type="Color" />
+            <input id="Color" type="Color" name="Color"/>
         </p>
         <p>
-            <label for="dob">Birth Of Date: </label>
-            <input id="DOB" type="date" placeholder="Birth of Date" />
+            <label for="DOB">Birth Of Date: </label>
+            <input id="DOB" type="date" placeholder="Birth of Date" name="DOB" />
         </p>
         <p>
             <label for="age">Enter age: </label>
-            <input id="age" type="number" placeholder="Enter your age" />
+            <input id="age" type="number" placeholder="Enter your age" name="age"/>
         </p>
 
         <button>Submit</button>
