HiJacking Search added

--- a/HTML-Section/forms.html
+++ b/HTML-Section/forms.html
@@ -10,29 +10,54 @@
     <!-- file:///D:/DiskD/UdemyCourses/Web-Development-Learning/HTML-Section/forms.html?username=&password=&Color=%23000000&DOB=&age= -->\
     <!-- file:///D:/DiskD/UdemyCourses/Web-Development-Learning/HTML-Section/forms.html?username=hiddenclue0&password=Jakir12345&Color=%230a5cff&DOB=2000-01-21&age=22 -->
     <form action="">
-        <p>
-            <label for="username">Enter a  UserName: </label>
-            <input id="username" type="text" placeholder="username" name="username"/>
-        </p>
-        <p>
-            <label for="password">Enter a password: </label>
-            <input id="password" type="password" placeholder="password" name="password"/>
-        </p>
-        <p> 
-            <label for="Color">Choose Favorite Color: </label>
-            <input id="Color" type="Color" name="Color"/>
-        </p>
-        <p>
-            <label for="DOB">Birth Of Date: </label>
-            <input id="DOB" type="date" placeholder="Birth of Date" name="DOB" />
-        </p>
-        <p>
-            <label for="age">Enter age: </label>
-            <input id="age" type="number" placeholder="Enter your age" name="age"/>
-        </p>
+      <p>
+        <label for="username">Enter a UserName: </label>
+        <input
+          id="username"
+          type="text"
+          placeholder="username"
+          name="username"
+        />
+      </p>
+      <p>
+        <label for="password">Enter a password: </label>
+        <input
+          id="password"
+          type="password"
+          placeholder="password"
+          name="password"
+        />
+      </p>
+      <p>
+        <label for="Color">Choose Favorite Color: </label>
+        <input id="Color" type="Color" name="Color" />
+      </p>
+      <p>
+        <label for="DOB">Birth Of Date: </label>
+        <input id="DOB" type="date" placeholder="Birth of Date" name="DOB" />
+      </p>
+      <p>
+        <label for="age">Enter age: </label>
+        <input id="age" type="number" placeholder="Enter your age" name="age" />
+      </p>
 
-        <button>Submit</button>
-        <input type="button" value="Click Me">
+      <button>Submit</button>
+      <input type="button" value="Click Me" />
     </form>
+    <form action="https://www.google.com/search">
+      <p>
+        <label for="search">Google Search: </label>
+        <input type="text" id="search" placeholder="Search" name="q" />
+      </p>
+    </form>
+
+    <p>
+        <form action="https://www.youtube.com/results">
+            <p>
+                <label for="youtube">Youtube Search: </label>
+                <input type="text" name="search_query" id="youtue">
+            </p>
+        </form>
+    </p>
   </body>
 </html>
