--- a/HTML-Section/forms.html
+++ b/HTML-Section/forms.html
@@ -59,5 +59,31 @@
             </p>
         </form>
     </p>
+    <p>
+      <h2>More Inputs- checkbox</h2>
+      <form action="/birds">
+        <input type="checkbox" name="agree_tos" id="agree">
+        <label for="agree">I agree to everything</label>
+        <button>submit</button>
+      </form>
+    </p>
+    <p>
+      <h2>More inpur- Radio_button</h2>
+      <label for="xs">XS:</label>
+      <input type="radio" name="size" id="xs" value="xs">
+      <label for="s">S:</label>
+      <input type="radio" name="size" id="s" value="s">
+      <label for="m">M:</label>
+      <input type="radio" name="size" id="m" value="m">
+    </p>
+    <p>
+      <h2>More input- Select</h2>
+      <label for="meal">Please select an entree</label>
+      <select name="meal" id="meal">
+        <option value="fish">Fish</option>
+        <option value="veg" selected>Vegeterian</option>
+        <option value="steak">Steak</option>
+      </select>
+    </p>
   </body>
 </html>
