range text-area added

--- a/HTML-Section/forms.html
+++ b/HTML-Section/forms.html
@@ -85,5 +85,20 @@
         <option value="steak">Steak</option>
       </select>
     </p>
+    <form action="cheese_lebel">
+      <p>
+        <label for="cheese_lebel">Amount of cheese</label>
+        <input type="range" name="" id="cheese" min="1" max="10" name="cheese_lebel" >  
+      </p>
+      <button>submit</button>
+    </form>
+
+    <form action="text_area">
+      <p>
+        <label for="request">any special request</label>
+        <textarea name="request" id="request" rows="10"></textarea>
+      </p>
+      <button>submit</button>
+    </form>
   </body>
 </html>
