--- a/HTML-Section/forms.html
+++ b/HTML-Section/forms.html
@@ -100,5 +100,27 @@
       </p>
       <button>submit</button>
     </form>
+
+
+    <h2>Validation Demo</h2>
+    <form action="/dummy">
+      <p>
+        <label for="first">Enter First Name</label>
+        <input type="text" name="fisrt" id="first" required>
+      </p>
+      <p>
+        <label for="username"> Username</label>
+        <input type="text" name="username" id="username" minlength="5" maxlength="20">
+      </p>
+      <p>
+        <label for="email">Enter your email</label>
+        <input type="email" name="" id="email" required>
+      </p>
+      <p>
+        <label for="url">Enter your website</label>
+        <input type="url" >
+      </p>
+      <button>Submit</button>
+    </form>
   </body>
 </html>
