added color to css

--- a/CSS-Section/index.html
+++ b/CSS-Section/index.html
@@ -1,30 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS Intro</title>
     <!-- <style>
         h2{
             color: palevioletred;
         }
     </style> -->
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <!-- InLine Style - BAD! -->
     <!-- <h1 style="color: purple;">Hello World! </h1>
     <button style="background-color: palegreen;">I am a button </button>
     <button style="background-color: palegreen;">Another Button</button> -->
 
-
-
     <h2>Im am a h2</h2>
     <h2>Im am a h2</h2>
     <h2>Im am a h2</h2>
     <h2>Im am a h2</h2>
-
-    
-
-</body>
+    <button>Button1</button>
+    <button>Button2</button>
+    <button>Button3</button>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum debitis
+      magnam dolores maxime ullam amet modi totam repellendus. Adipisci eius,
+      obcaecati et nisi saepe rerum cum minus odit laboriosam aut! Dicta,
+      voluptatum iste delectus modi amet aliquam, mollitia nobis, ipsa animi
+      enim asperiores ad suscipit nisi culpa hic omnis excepturi accusantium
+      facilis! Repellendus sed rem porro odit itaque possimus corrupti!
+    </p>
+  </body>
 </html>
