--- a/CSS-Section/CommonTextproperties.html
+++ b/CSS-Section/CommonTextproperties.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS Text Properties</title>
+    <link rel="stylesheet" href="commonTextStyle.css">
   </head>
   <body>
     <article>
