--- a/CSS-Section/CSSselectors.html
+++ b/CSS-Section/CSSselectors.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Selectors</title>
+    <link rel="stylesheet" href="CSSselectors.css">
 </head>
 <body>
     <form action="">
