--- a/CSS-Section/CheckBoard Exercise assignmrnt/index.html
+++ b/CSS-Section/CheckBoard Exercise assignmrnt/index.html
@@ -3,7 +3,8 @@
 <head>
 
   <title>Checkerboard</title>
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="app.css">
 
 </head>
 
