pseudo elements added

--- a/CSS-Section/CSSselectors.html
+++ b/CSS-Section/CSSselectors.html
@@ -81,6 +81,17 @@
             <button>+vote</button>
             <hr>
         </section>
+
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas illum temporibus quia laudantium sit placeat non, animi beatae praesentium ut dolor facere nam reiciendis voluptate dolores commodi eveniet! Quibusdam, cupiditate.
+        Ratione, totam atque maiores quidem accusamus facilis, voluptate iusto iste quos illum cum voluptatem asperiores dignissimos odit aut delectus velit mollitia aperiam. Eos accusantium ea atque ex reiciendis dolorum quibusdam?
+        Officiis totam accusamus veniam dicta eum ullam saepe, accusantium quae esse soluta consectetur quaerat eveniet porro repudiandae ratione quod neque iusto? Natus id quas nesciunt expedita dignissimos mollitia praesentium assumenda!
+        Rerum sint illum vel, fugiat illo inventore tempora ad ullam eveniet corporis commodi provident quod, fugit libero quasi. Quis, minima atque corporis cum voluptatum ipsum velit animi fugit ex totam?
+        Eum quo odit earum repellendus! Quae deleniti, nemo itaque officiis quis voluptatum ab consequuntur nihil adipisci explicabo nostrum dolorum similique distinctio rem! Cupiditate placeat facilis quisquam repudiandae, laboriosam recusandae ex.
+        Laudantium, repudiandae cupiditate ratione fugit maiores est aspernatur molestiae corrupti distinctio vel minus nihil alias nisi assumenda quo ab eligendi doloribus totam placeat doloremque! Ad error itaque ab modi cumque.
+        Modi maiores quasi eaque alias earum! Voluptatum facilis, quidem voluptate ullam minima adipisci, harum alias ea, obcaecati incidunt aut! Obcaecati deserunt eligendi commodi sequi dolore ipsam exercitationem quod quia provident?
+        Qui alias sunt deleniti a, aliquid rerum earum! Deserunt quas temporibus aspernatur nemo aut dolorum dolor, dolorem, amet voluptates excepturi aliquam! Nostrum quia fugiat sequi architecto cumque a amet ratione!
+        Adipisci atque ad, accusantium, corporis vitae ipsam minus nihil qui modi perspiciatis unde voluptatem placeat tempore ab delectus sit harum neque pariatur, velit ipsum quas iste id quidem laboriosam. Numquam.
+        Rem animi voluptatum consequuntur eaque architecto unde repellendus id? Magnam architecto explicabo nemo sapiente similique ipsa atque odio minima blanditiis. Amet vel, assumenda obcaecati dolore explicabo sapiente fuga iusto officiis!</p>
     </main>
 
     <footer>
