--- a/CSS-Section/boxmodel.html
+++ b/CSS-Section/boxmodel.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="boxmodel.css" />
   </head>
   <body>
-    <h1>Hello</h1>
+    <h1 id="zero">Hello</h1>
 
-    <div>
+    <div id="one">
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus
       molestias voluptate praesentium, nisi sit rem rerum, blanditiis ducimus
       cupiditate cumque veritatis? In distinctio error eveniet ut iusto dolorum
@@ -18,7 +18,7 @@
       aperiam veniam harum accusantium, dolor deleniti, ipsam dolores ad impedit
       itaque. Doloremque aliquam perferendis in quos?
     </div>
-    <div>
+    <div id="two">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem obcaecati
       ipsum corrupti, exercitationem perspiciatis consequatur incidunt ut quasi
       recusandae laborum voluptate consequuntur unde, nostrum, neque quam in
@@ -27,7 +27,7 @@
       blanditiis ea minima facere delectus, dolores quaerat sed fugiat magnam
       sequi. Earum magnam laboriosam vitae velit?
     </div>
-    <div>
+    <div id="three">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem
       possimus alias pariatur eligendi dolore blanditiis dicta non eius,
       corrupti quo! Odit at delectus temporibus laboriosam odio, excepturi
@@ -36,7 +36,7 @@
       Laudantium voluptatem, porro expedita nemo saepe ad ipsam, et blanditiis
       cupiditate sequi dolorum facilis omnis! Consectetur!
     </div>
-    <div>
+    <div id="four">
       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio, tempora
       sequi quas qui deserunt facere recusandae repudiandae praesentium amet
       enim distinctio quae, tempore inventore nulla sint totam itaque possimus
