--- a/CSS-Section/cssUnit.html
+++ b/CSS-Section/cssUnit.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS Unit</title>
-</head>
-<body>
-   
-    
-</body>
+    <link rel="stylesheet" href="cssUnit.css" />
+  </head>
+  <body>
+    <h1>CSS Units</h1>
+
+    <article>
+      <h2>i am h2</h2>
+      <h3>I am h3</h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure explicabo
+        quas sint odio libero, vel error sunt dicta voluptas quia iusto animi
+        aliquam eius hic, pariatur et quasi ipsa officia. Cumque officia eveniet
+        expedita doloremque odio? Praesentium adipisci quisquam molestiae.
+        Nihil, enim beatae? Nesciunt voluptatem aliquid iure. Illum consequuntur
+        voluptatum, eos dolorum atque minima autem unde culpa commodi laborum
+        distinctio.
+      </p>
+    </article>
+    <section>
+      <div></div>
+    </section>
+  </body>
 </html>
