--- a/Practice Project/index.html
+++ b/Practice Project/index.html
@@ -11,7 +11,7 @@
     <div class="panel">
 
         <div class="pricing-plan">
-            <img src="images/icon1.png" alt="icon1.png">
+            <img src="images/icon1.png" alt="icon1.png" class="pricing-img">
             <h2 class="pricing-header">Personal</h2>
             <ul class="pricing-features">
                 <li class="pricing-features-item">Custom domains</li>
@@ -22,18 +22,18 @@
         </div>
 
         <div class="pricing-plan">
-            <img src="images/icon2.png" alt="icon2.png">
+            <img src="images/icon2.png" alt="icon2.png" class="pricing-img">
             <h2 class="pricing-header">Small team</h2>
             <ul class="pricing-features">
                 <li class="pricing-features-item">Never Sleeps</li>
                 <li class="pricing-features-item">Multiple workers for more powerful apps</li>
             </ul>
             <span class="pricing-price">$150</span>
-            <a href="#/" class="pricing-button">Free Trial</a>
+            <a href="#/" class="pricing-button  is-featured">Free Trial</a>
         </div>
 
         <div class="pricing-plan">
-            <img src="images/icon3.png" alt="icon3.png">
+            <img src="images/icon3.png" alt="icon3.png" class="pricing-img">
             <h2 class="pricing-header">Enterprise</h2>
             <ul class="pricing-features">
                 <li class="pricing-features-item">Dedicated</li>
