--- a/BootStrap/index.html
+++ b/BootStrap/index.html
@@ -1,11 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BootStrap Basics</title>
-</head>
-<body>
-    
-</body>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <h1>This is h1</h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde
+        praesentium incidunt perferendis reiciendis maiores inventore saepe
+        molestiae rerum qui. Velit vero repudiandae assumenda delectus nobis
+        deleniti molestiae. Perferendis, nam nesciunt. Iste rem in veniam
+        voluptatum consectetur odit enim labore quae! Beatae impedit, magnam quo
+        laudantium voluptatum ipsum, expedita quam voluptate tempora eum
+        delectus error a non molestias dolores voluptas! Corrupti. Magni cumque
+        aut ut commodi quis dignissimos, ratione facilis, et, ex iusto
+        repudiandae aliquid cum dolorum praesentium obcaecati sint! Vitae,
+        consectetur corporis at totam facere enim iusto. Fugit, sit nisi!
+      </p>
+    </div>
+
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
