--- a/Practice Project-02/index.html
+++ b/Practice Project-02/index.html
@@ -4,10 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mesume Of Candy</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,700"
       rel="stylesheet"
     />
     <link
@@ -19,6 +17,147 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <nav
+      id="mainNavbar"
+      class="navbar navbar-dark navbar-expand-md py-0 fixed-top"
+    >
+      <a href="#" class="navbar-brand">CANDY</a>
+      <button
+        class="navbar-toggler"
+        data-toggle="collapse"
+        data-target="#navLinks"
+        aria-level="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navLinks">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a href="" class="nav-link">HOME</a>
+          </li>
+
+          <li class="nav-item">
+            <a href="" class="nav-link">ABOUT</a>
+          </li>
+
+          <li class="nav-item">
+            <a href="#" class="nav-link">TICKETS</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <section class="container-fluid px-0">
+      <div class="row align-items-center">
+        <div class="col-lg-6">
+          <div
+            id="headingGroup"
+            class="text-white text-center d-none mt-5 d-lg-block"
+          >
+            <h1 class="text-center">
+              MESUME<span>/</span>OF<span>/</span>CANDY
+            </h1>
+            <h1 class="text-center">
+              MESUME<span>/</span>OF<span>/</span>CANDY
+            </h1>
+            <h1 class="text-center">
+              MESUME<span>/</span>OF<span>/</span>CANDY
+            </h1>
+            <h1 class="text-center">
+              MESUME<span>/</span>OF<span>/</span>CANDY
+            </h1>
+            <h1 class="text-center">
+              MESUME<span>/</span>OF<span>/</span>CANDY
+            </h1>
+            <h1 class="text-center">
+              MESUME<span>/</span>OF<span>/</span>CANDY
+            </h1>
+            <h1 class="text-center">
+              MESUME<span>/</span>OF<span>/</span>CANDY
+            </h1>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <img class="img-fluid" src="images/hand2.png" alt="hand2" />
+        </div>
+      </div>
+    </section>
+
+    <section class="container-fluid px-0">
+      <div class="row align-items-center content">
+        <div class="col-md-6 order-2 order-md-1">
+          <img src="images/milk.png" alt="milk" class="img-fluid" />
+        </div>
+        <div class="col-md-6 text-center order-1 order-md-2">
+          <div class="row justify-content-center">
+            <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+              <h2 class="">MESUME OF CANDY</h2>
+              <img
+                src="images/lolli_icon.png"
+                alt="lolli_icon"
+                class=" d-none d-lg-inline"
+              />
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
+                nisi laudantium fugit molestiae consectetur doloremque totam
+                quas. Veritatis, quisquam! Alias autem consequuntur culpa dicta
+                repellat repellendus ad, voluptatem doloribus. Aperiam.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      
+      <div class="row align-items-center content">
+        
+        <div class="col-md-6 text-center ">
+          <div class="row justify-content-center">
+            <div class="col-10 col-lg-8 blurb  mb-5 mb-md-0">
+              <h2 class="">MESUME OF CANDY</h2>
+              <img
+                src="images/lolli_icon.png"
+                alt="lolli_icon"
+                class=" d-none d-lg-inline"
+              />
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
+                nisi laudantium fugit molestiae consectetur doloremque totam
+                quas. Veritatis, quisquam! Alias autem consequuntur culpa dicta
+                repellat repellendus ad, voluptatem doloribus. Aperiam.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 ">
+          <img src="images/gumball.png" alt="gumball" class="img-fluid" />
+        </div>
+      </div>
+
+      <div class="row align-items-center content">
+        <div class="col-md-6 order-2 order-md-1">
+          <img src="images/sprinkles.png" alt="sprinkles" class="img-fluid" />
+        </div>
+        <div class="col-md-6 text-center order-1 order-md-2">
+          <div class="row justify-content-center">
+            <div class="col-10 col-lg-8 blurb  mb-5 mb-md-0">
+              <h2 class="">MESUME OF CANDY</h2>
+              <img
+                src="images/lolli_icon.png"
+                alt="lolli_icon"
+                class=" d-none d-lg-inline"
+              />
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
+                nisi laudantium fugit molestiae consectetur doloremque totam
+                quas. Veritatis, quisquam! Alias autem consequuntur culpa dicta
+                repellat repellendus ad, voluptatem doloribus. Aperiam.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -34,5 +173,14 @@
       integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
       crossorigin="anonymous"
     ></script>
+
+    <script>
+      $(function () {
+          $(document).scroll(function () {
+              var $nav = $("#mainNavbar");
+              $nav.toggleClass("scrolled", $(this).scrollTop() > $nav.height());
+          });
+      });
+  </script>
   </body>
 </html>
